--- a/.github/workflows/deploy-with-ARM.yml
+++ b/.github/workflows/deploy-with-ARM.yml
@@ -2,7 +2,7 @@ name: Deploy with ARM
 
 on:
   push:
-    branches: [ main ] # Triggers the workflow on push on the main branch
+    # branches: [ main ] # Triggers the workflow on push on the main branch
   workflow_dispatch: # Allows you to run this workflow manually from the Actions tab
 
 
@@ -37,6 +37,7 @@ jobs:
           subscriptionID: ${{env.SUBSCRIPTION_ID}}
           resourceGroupName: ${{env.RESOURCE_GROUP_NAME}}
           template: .github/workflows/armdeployment.json
+          parameters: storageAccounts_python_nos_scraper_name=pythonnosscraper2
 
   build_and_deploy_function_app:
     needs: [deploy_ARM]
